--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-TMBB1NR\\SQLEXPRESS;Database=;Trusted_Connection=True;TrustServerCertificate=True" // Pcnizin ismine göre server kısmını değiştirin
+  }
 }
