--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-TMBB1NR\\SQLEXPRESS;Database=;Trusted_Connection=True;TrustServerCertificate=True" // Pcnizin ismine göre server kısmını değiştirin
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=DB_Hazelnut;Trusted_Connection=True;AttachDbFilename=|DataDirectory|\\DB_Hazelnut.mdf;TrustServerCertificate=True"
   }
 }
